--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@stacks/connect": "^8.1.7",
+    "@stacks/network": "^7.0.2",
+    "@stacks/transactions": "^7.0.5",
     "@supabase/supabase-js": "^2.49.1",
     "@tanstack/react-query": "^5.56.2",
     "class-variance-authority": "^0.7.1",
